examples/test/testpolicy18430.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy18430
  namespace: namespace60
spec:
  podSelector:
    matchLabels:
      key21: value32
      key44: value1
      key37: value27
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key29: value25
          key46: value9
          key45: value1
      podSelector:
        matchLabels:
          key5: value22
